<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_dialog_description"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_settings_directory"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/export_directory_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/export_settings_no_directory" />

        <Button
            android:id="@+id/export_directory_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_settings_choose" />
    </LinearLayout>

    <Switch
        android:id="@+id/export_compress_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_settings_compress" />

</LinearLayout>
